# CMakeAndCPP

./: .gitignore  README.md
LearnCMake/HelloWorld/: CMakeLists.txt  build.sh  helloworld.cpp
LearnCMake/StaticSharedLib/: CMakeLists.txt
LearnCMake/StaticSharedLib/src/: lib2.cpp
LearnCMake/Subdirectories/: CMakeLists.txt  Makefile  build.sh
LearnCMake/Subdirectories/helloworld/: CMakeLists.txt  Makefile  cmake_install.cmake
LearnCMake/Subdirectories/helloworld/src/: helloworld.cpp
LearnCMake/Subdirectories/include/: lib2.h
LearnCMake/Subdirectories/lib1/: CMakeLists.txt  Makefile  cmake_install.cmake
LearnCMake/Subdirectories/lib1/include/: lib1.h
LearnCMake/Subdirectories/lib1/src/: lib1.cpp
LearnCMake/Subdirectories/lib2/: CMakeLists.txt  Makefile  cmake_install.cmake
